# SDNMininet

./: .gitignore  README.md  launch_experiment.py  notes.md  pyproject.toml  requirements-ryu.txt  requirements.txt
analysis/csv_preprocessing/: group_packet_data.py
config/: environment.py  execution_context.py  execution_context_factory.py  experiment_config.py
controllers/: base_controller.py  exp1_controller.py
controllers/base_controller/: controller.py
controllers/first_measurement_controller/: controller.py
controllers/rules/: packetin_rules.py  setup_rules.py
controllers/test_controller/: controller.py
experiments/: experiment.py  experiment_management.py  experiment_register.py
experiments/experiment_1/: experiment_1.md  experiment_1.py  host_program.py  run_experiment.py
experiments/experiment_ddos/: experiment_1.py  experiment_ddos.py
experiments/shared_host_programs/: poisson_udp_host_program.py
infrastructure/: controller_management.py  controller_manager.py  network_management.py  network_manager.py
launchers/: experiment_launcher.py  host_program_launcher.py  launch_experiment.py  usage.md
model/: host.py  udp_receiver.py  udp_sender.py
scripts/: experiment_1_rx_packet_count.sh  install.sh
scripts/common/: controller_management.py  environment.py  experiment_management.py  host_program_launcher.py
scripts/experiment_1/: experiment_1.md  host_program.py  (+1 more)
src/: udp_sender.py
tests/: conftest.py
topologies/: awad_topology.py  simple_topology.py  test_topologies.py  topology_register.py
traffic_models/: arrival_processes.py
(+23 files in other folders)
