[project]
name = 'sdn-simulator'
version = '0.1.0'
description = 'Mininet-Ryu based SDN environment for traffic analysis'
requires-python = '==3.8.*'

authors = [
  {name = 'Gabriel Pena', email = 'gpena@untref.edu.ar'}
]

dependencies = [
    'certifi==2026.5.20',
    'charset-normalizer==3.4.7',
    'debtcollector==3.0.0',
    'debugpy==1.8.21',
    'dnspython==1.16.0',
    'eventlet==0.31.1',
    'exceptiongroup==1.3.1',
    'greenlet==3.1.1',
    'idna==3.15',
    'iniconfig==2.1.0',
    'mininet==2.3.0.dev6',
    'msgpack==1.1.1',
    'netaddr==1.3.0',
    'numpy==1.24.4',
    'oslo-config==9.6.1',
    'oslo.i18n==6.4.0',
    'ovs==3.7.1',
    'packaging==20.9',
    'pandas==2.0.3',
    'pbr==7.0.3',
    'pluggy==1.5.0',
    'pyparsing==3.1.4',
    'pytest==8.3.5',
    'python-dateutil==2.9.0.post0',
    'pytz==2026.2',
    'PyYAML==6.0.3',
    'repoze.lru==0.7',
    'requests==2.32.4',
    'rfc3986==2.0.0',
    'Routes==2.5.1',
    'six==1.17.0',
    'sortedcontainers==2.4.0',
    'stevedore==5.3.0',
    'tinyrpc==1.0.4',
    'tomli==2.4.1',
    'typing-extensions==4.13.2',
    'tzdata==2026.3',
    'urllib3==2.2.3',
    'webob==1.8.10',
    'wrapt==2.0.1',
]
